# todoist-to-sqlite

./: README.md  pyproject.toml  setup.py
todoist_to_sqlite/: cli.py
